# variant_alert

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
const/: clinvar.py  ftp.py
logger/: logger.py
parsers/vcf/: __init__.py  clinvar.py
tests/: __init__.py
tests/parsers/vcf/: test_vcf_clinvar.py  test_vcf_parser.py
tests/parsers/vcf/data/: expected_clinvar_gene_diff_from_20190805_to_20190915.tsv  expected_clinvar_gene_diff_from_20190805_to_20190925.tsv  expected_clinvar_variant_diff_from_20190805_to_20190915.tsv  expected_clinvar_variant_diff_from_20190805_to_20190915.vcf  expected_clinvar_variant_diff_from_20190805_to_20190925.tsv  expected_clinvar_variant_diff_from_20190805_to_20190925.vcf  expected_clinvarome_20190915.tsv  expected_clinvarome_20190925.tsv
tests/parsers/vcf/data/clinvar/: expected_clinvar_gene_diff_from_20190805_to_20190915.tsv  expected_clinvar_gene_diff_from_20190805_to_20190925.tsv  expected_clinvar_variant_diff_from_20190805_to_20190915.tsv  expected_clinvar_variant_diff_from_20190805_to_20190915.vcf  expected_clinvar_variant_diff_from_20190805_to_20190925.tsv  expected_clinvar_variant_diff_from_20190805_to_20190925.vcf  expected_clinvarome_20190915.tsv  expected_clinvarome_20190925.tsv  expected_compared_genes_20190915.json  expected_compared_genes_20190925.json  expected_compared_variants_20190915.json  expected_compared_variants_20190925.json  expected_gene_buffer.json  expected_variant_buffer.json
variant_alert/: __init__.py  cli.py
